sorted out alignment issue on smaller screen size for portfolio.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,8 @@ a.nav-pagelink  {
     width: 90%;
     height: auto;
     padding-bottom: 50px;
-    margin-left: 50px;
+    padding-top: 10px;
+    padding-left: 50px;
 }
 
 .whiskeydrop {
@@ -140,7 +141,7 @@ a.nav-pagelink  {
     height: auto;
     margin-top: 30px;
     padding-bottom: 50px;
-    margin-left: 50px;
+    padding-left: 50px;
 }
 
 .msp1 {
@@ -149,9 +150,10 @@ a.nav-pagelink  {
     width: 90%;
     height: auto;
     margin-top: 30px;
-    padding-bottom: 50px;
-    margin-left: 50px;   
+    padding-bottom: 50px;  
+    padding-left: 50px;
 }
+
 /*----------------------------------------Contact.html*/
 
 .contact-us-header {
